--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -66,7 +66,7 @@
 				margin-top: 1rem;
 			}
 			.speed {
-				display: none;
+				display: flex;
 				justify-content: flex-end;
 				align-items: flex-end;
 
