--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	background-color: var(--theme-color-06);
+	// background-color: var(--theme-color-06);
 	color: var(--theme-text-color-02);
 
 	&_city,
@@ -33,7 +33,7 @@
 			align-items: center;
 			margin-bottom: 1rem;
 			padding: 1rem;
-			background-color: var(--theme-color-06);
+			// background-color: var(--theme-color-06);
 			.date {
 				display: block;
 				width: 100%;
