--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,8 @@
 // @use './public/assets/weather-icons-master/css/weather-icons-wind.min.css';
 
 body {
-	background-color: var(--theme-color-05);
+	// background-color: var(--theme-color-05);
+	background-color: #3769b6;
 	color: var(--theme-text-color-01);
 }
 
