--- a/sass/_root.scss
+++ b/sass/_root.scss
@@ -8,6 +8,7 @@
 	--theme-color-05: #34a7e0;
 	--theme-color-06: #164861;
 	--theme-color-07: #cbdae1;
+	--theme-color-08: #3769b6;
 	--theme-aktive: #37c217;
 	--filter-icon: #164861;
 	--filter-icon-active: #f1f1f1;
