--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	// background-color: var(--theme-color-06);
 	color: var(--theme-text-color-02);
 
 	&_city,
@@ -17,15 +16,12 @@
 		margin: 1rem auto;
 		padding-bottom: 1rem;
 		border-bottom: 2px solid #f1f1f1;
-
-		// background-color: var(--theme-color-05);
 	}
+
 	&_list {
-		// display: none;
 		list-style: none;
 		margin: 0 auto;
 		padding: 0;
-		color: var(--theme-text-color-02);
 		&_item {
 			display: flex;
 			justify-content: flex-start;
@@ -33,7 +29,6 @@
 			align-items: center;
 			margin-bottom: 1rem;
 			padding: 1rem;
-			// background-color: var(--theme-color-06);
 			.date {
 				display: block;
 				width: 100%;
@@ -78,21 +73,21 @@
 					margin-left: 0.5rem;
 				}
 			}
+			.wi {
+				font-size: 1.2rem;
+			}
+			.big {
+				font-size: 3rem;
+			}
 		}
 	}
-}
 
-.wi {
-	font-size: 1.2rem;
-}
-
-.wi-humidity {
-	color: var(--theme-color-05);
-	font-size: 1rem;
-}
-
-.big {
-	font-size: 3rem;
-	// height: 3rem;
-	// background-color: green;
+	.result {
+		width: 90vw;
+		min-width: 280px;
+		max-width: 400px;
+		margin: auto;
+		font-size: 1.5rem;
+		font-style: italic;
+	}
 }
