--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,28 +1,9 @@
 @use 'root';
 @use 'normalize';
 @use 'filter';
-@use 'home';
 @use 'main';
 
-// @use './public/assets/fontawesome-free-5.15.4-web/css/all.min.css';
-// @use './public/assets/weather-icons-master/css/weather-icons.min.css';
-// @use './public/assets/weather-icons-master/css/weather-icons-wind.min.css';
-
 body {
-	// background-color: var(--theme-color-05);
-	background-color: #3769b6;
-	color: var(--theme-text-color-01);
-}
-
-.filter_form {
-	/**/
-	.sky_icons {
-		// display: none;
-	}
-}
-
-ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+	background-color: var(--theme-color-08);
+	color: var(--theme-text-color-02);
 }
