--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -13,7 +13,7 @@
 
 	&_city {
 		display: block;
-		margin: 1rem auto;
+		margin: 1rem auto 0 auto;
 		padding-bottom: 1rem;
 		border-bottom: 2px solid #f1f1f1;
 	}
@@ -27,8 +27,10 @@
 			justify-content: flex-start;
 			flex-wrap: wrap;
 			align-items: center;
-			margin-bottom: 1rem;
+			margin-bottom: 1.6rem;
 			padding: 1rem;
+			box-shadow: 0px 0px 3px rgba($color: #fff, $alpha: 0.5);
+			border-radius: 7px;
 			.date {
 				display: block;
 				width: 100%;
@@ -86,7 +88,7 @@
 		width: 90vw;
 		min-width: 280px;
 		max-width: 400px;
-		margin: auto;
+		margin: 1rem auto;
 		font-size: 1.5rem;
 		font-style: italic;
 	}
